--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <title>Plan Cancer </title>
+    <title>Plan Cancer</title>
     <link rel="stylesheet" href="style.css">
+    <!--<link rel="stylesheet" href="css/bootstrap.css">-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
-    <script defer src="theme.js"></script>
+    <!--Logo du site-->
+    <link rel="icon" href="Images/logoE.png">
 </head>
     <body>
         <nav class="navbar">
@@ -92,7 +94,19 @@
                 </li>
             </ul>
         </nav>
+
         <main>
+            <div class="navtwo">
+                <div class="search-box">
+                    <input class="search-text"type="text" placeholder="Rechercher">
+                    <a class="search-btn" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" 
+                        viewBox="0 0 512 512">
+                        <path d="M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z"/>
+                        </svg>
+                     </a>
+                </div>
+            </div>
             <p>
                 Hello world:))
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Semper viverra nam libero justo laoreet sit amet. Et malesuada fames ac turpis egestas maecenas pharetra. Eu nisl nunc mi ipsum faucibus vitae. Nisl suscipit adipiscing bibendum est ultricies integer. Aliquam eleifend mi in nulla posuere. Mauris sit amet massa vitae tortor condimentum lacinia quis. Etiam non quam lacus suspendisse faucibus interdum posuere. Nunc consequat interdum varius sit amet mattis vulputate enim. In ante metus dictum at tempor. Auctor urna nunc id cursus metus aliquam eleifend mi in. Et egestas quis ipsum suspendisse ultrices gravida. Risus quis varius quam quisque id diam vel quam. Ut pharetra sit amet aliquam id diam maecenas. Vitae tempus quam pellentesque nec nam aliquam. Nunc mi ipsum faucibus vitae. Dolor sit amet consectetur adipiscing. In metus vulputate eu scelerisque felis. Gravida neque convallis a cras semper auctor neque vitae tempus.<br>
