changed syntaxe so images will show up in github

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="images/logoE.png">
+    <link rel="icon" href="Images/logoE.png">
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    </head>
 <body>
   <div class="sidebar">
     <div class="logo-details">
-      <img class="bx icon" src="images/logoE.png"></img>
+      <img class="bx icon" src="Images/logoE.png"></img>
         <div class="logo_name">Plan cancer</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
@@ -97,7 +97,7 @@
     </li>
      <li class="profile">
          <div class="profile-details">
-           <img src="images/testprofile.jpg" alt="profileImg">
+           <img src="Images/testprofile.jpg" alt="profileImg">
            <div class="name_job">
              <div class="name">Fentazi Riad</div>
              <div class="job">I like penguins:p</div>
@@ -124,7 +124,7 @@
    <div class="swiper home-slider">
 
       <div class="swiper-wrapper">
-         <div class="swiper-slide slide" style="background:url(images/image1.jpg) no-repeat">
+         <div class="swiper-slide slide" style="background:url(Images/image1.jpg) no-repeat">
             <div class="content">
                <span>La santé est beaucoup plus que l’absence de maladie!</span>
                <h3>Luttons contre le cancer!</h3>
@@ -132,7 +132,7 @@
             </div>
          </div>
 
-         <div class="swiper-slide slide" style="background:url(images/image2.jpg) no-repeat">
+         <div class="swiper-slide slide" style="background:url(Images/image2.jpg) no-repeat">
             <div class="content">
                <span>Bonne ou mauvaise santé fait notre philosophie!</span>
                <h3>Aidez nous à vous protéger</h3>
@@ -140,7 +140,7 @@
             </div>
          </div>
 
-         <div class="swiper-slide slide" style="background:url(images/image3.jpg) no-repeat">
+         <div class="swiper-slide slide" style="background:url(Images/image3.jpg) no-repeat">
             <div class="content">
                <span>Votre confiance est note priorité!</span>
                <h3>il est jamais trop tard</h3>
@@ -168,22 +168,22 @@
    <div class="box-container">
 
       <div class="box">
-         <img src="images/icon-1.png" alt="">
+         <img src="Images/icon-1.png" alt="">
          <h3>Axe 1: Améliorer la prévention contre les facteurs de risque</h3>
       </div>
 
       <div class="box">
-         <img src="images/icon-2.png" alt="">
+         <img src="Images/icon-2.png" alt="">
          <h3>Axe 2: Améliorer le dépistage de certains cancers</h3>
       </div>
 
       <div class="box">
-         <img src="images/icon-3.png" alt="">
+         <img src="Images/icon-3.png" alt="">
          <h3>Axe 3: Améliorer le diagnostic</h3>
       </div>
 
       <div class="box">
-         <img src="images/icon-4.png" alt="">
+         <img src="Images/icon-4.png" alt="">
          <h3>Axe 4: Redynamiser le traitement</h3>
       </div>
 
@@ -192,22 +192,22 @@
    <div class="box-container">
 
       <div class="box">
-         <img src="images/icon-5.png" alt="">
+         <img src="Images/icon-5.png" alt="">
          <h3>Axe 5: Organiser l'orientation, l'accompagnement et le suivi du patient</h3>
       </div>
 
       <div class="box">
-         <img src="images/icon-6.png" alt="">
+         <img src="Images/icon-6.png" alt="">
          <h3>Axe 6: Développer le système d'information et la communication sur les cancers</h3>
       </div>
       
       <div class="box">
-         <img src="images/icon-6.png" alt="">
+         <img src="Images/icon-6.png" alt="">
          <h3>Axe 7: Renforcer la formation et la recherche sur les cancers</h3>
       </div>
       
       <div class="box">
-         <img src="images/icon-6.png" alt="">
+         <img src="Images/icon-6.png" alt="">
          <h3>Axe 8: Renforcer les capacités de financement de la prise en charge des cancers</h3>
       </div>
    </div>
@@ -220,7 +220,7 @@
 <section class="home-about">
 
    <div class="image">
-      <img src="images/aboutusimage.jpg" alt="">
+      <img src="Images/aboutusimage.jpg" alt="">
    </div>
 
    <div class="content">
