revert some changed

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
    <div class="swiper home-slider">
 
       <div class="swiper-wrapper">
-         <div class="swiper-slide slide" style="background:url(/Images/image1.jpg) no-repeat">
+         <div class="swiper-slide slide" style="background:url(Images/image1.jpg) no-repeat">
             <div class="content">
                <span>La santé est beaucoup plus que l’absence de maladie!</span>
                <h3>Luttons contre le cancer!</h3>
