contribution nav bar, fixed css, linked pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <span class="tooltip">Recherche</span>
       </li>
       <li>
-        <a class="flyer" href="#">
+        <a class="flyer" href="index.html">
           <i class='bx bxs-home-heart fly'></i>
           <span class="links_name">Accueil</span>
         </a>
@@ -54,7 +54,7 @@
        <span class="tooltip">Réunions</span>
      </li>
      <li>
-       <a class="flyer" href="#">
+       <a class="flyer" href="contributions.html">
          <i class='bx bx-donate-heart fly' ></i>
          <span class="links_name">Contributions</span>
        </a>
@@ -111,8 +111,8 @@
   <!-- 2nd page kinda-->
   <section class="header">
    <div id="menu-btn"></div>
-  </section>
-</section>
+     </section>
+
 
 <!-- fin du header -->
 
