Reunion page with adding feature for reunions and membres

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <span class="tooltip">Groupe</span>
       </li>
       <li>
-        <a class="flyer" href="#">
+        <a class="flyer" href="reunion.html">
           <i class='bx bx-user-voice fly'></i>
           <span class="links_name">Réunions</span>
         </a>
@@ -333,32 +333,8 @@
   <!-- fin du conrenu principale -->
 
   <!-- custom js file link  -->
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 
-  <script>
-    let sidebar = document.querySelector(".sidebar");
-    let closeBtn = document.querySelector("#btn");
-    let searchBtn = document.querySelector(".bx-search");
-
-    closeBtn.addEventListener("click", () => {
-      sidebar.classList.toggle("open");
-      menuBtnChange();//calling the function(optional)
-    });
-
-    searchBtn.addEventListener("click", () => { // Sidebar open when you click on the search iocn
-      sidebar.classList.toggle("open");
-      menuBtnChange(); //calling the function(optional)
-    });
-
-    // following are the code to change sidebar button(optional)
-    function menuBtnChange() {
-      if (sidebar.classList.contains("open")) {
-        closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");//replacing the iocns class
-      } else {
-        closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");//replacing the iocns class
-      }
-    }
-  </script>
 </body>
 
 </html>
