probleme de js fixé par mehdi

--- a/contributions.html
+++ b/contributions.html
@@ -115,7 +115,7 @@
       <section class="header">
        <div id="menu-btn"></div>
          </section>
-    
+  <main>
     <section class="don-sec" id="donation">
         <div class="container">
             <div class="heading">
@@ -173,7 +173,7 @@
             </div>
         </div>
     </section>
-
+  </main>
 </body>
 <!-- custom js file link  -->
 <script src="js/script.js"></script>
