fixed padding issue

--- a/reunion.html
+++ b/reunion.html
@@ -117,7 +117,7 @@
         <div id="menu-btn"></div>
     </section>
     <section class="reunion-sec">
-
+<main>
         <div>
             <h2>Les réunions à venir Lorem ipsum dolor, sit amet consectetur..</h2>
         </div>
@@ -167,21 +167,8 @@
         </div>
 
     </section>
-
+  </main>
     <script>
-        /*
-        let allButtons = document.querySelectorAll(".reunion-btn");
-        for (let btn of allButtons) {
-            document.querySelector(".reunion-btn").addEventListener('click', () => {
-                document.querySelector(".bg-membres").style.display = "flex";
-            });
-
-            document.querySelector(".close-btn").addEventListener('click', () => {
-            document.querySelector(".bg-membres").style.display = "none";
-        });
-        }
-        */
-
         document.querySelector(".reunion-btn").addEventListener('click', () => {
             document.querySelector(".bg-membres").style.display = "flex";
         });
