fixed paddin issue 2.0

--- a/groupe.html
+++ b/groupe.html
@@ -11,7 +11,8 @@
     <link rel="icon" href="Images/logoE.png">
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    </head>
-<div class="sidebar">
+<body>
+  <div class="sidebar">
     <div class="logo-details">
       <img class="bx icon" src="Images/logoE.png"></img>
         <div class="logo_name">Plan cancer</div>
@@ -111,5 +112,9 @@
    <div id="menu-btn"></div>
      </section>
     <main>
-        <h1>consultation des groupes</h1>
+      <h1>consultation des groupes</h1>
     </main>
+
+
+  <script src="js/script.js"></script>
+</body>   
