--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        <span class="tooltip">Plan national cancer</span>
      </li>
      <li>
-       <a class="flyer" href="#">
+       <a class="flyer" href="groupe.html">
          <i class='bx bx-group fly'></i>
          <span class="links_name">Groupe</span>
        </a>
