ajout de liste des thématique et liste des groupes

--- a/groupe.html
+++ b/groupe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Plan cancer</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/groupes.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -112,7 +113,27 @@
    <div id="menu-btn"></div>
      </section>
     <main>
-      <h1>consultation des groupes</h1>
+      <h1 class="titre">consultation des groupes</h1>
+      <div class="box-container">
+        <div class="box"> 
+          <h2>Veuillez choisir la thématique</h2>
+          <div class="menuu ">      
+            <a href="">Theméatique 1</a>
+            <a href="">Theméatique 2</a>
+            <a href="">Theméatique 3</a>
+            <a href="">Theméatique 4</a>
+          </div>
+        </div>
+        <div class="box"> 
+          <h2>Veuillez choisir le groupe</h2>
+          <div class="menuu ">      
+            <a href="">groupe 1</a>
+            <a href="">groupe 2</a>
+            <a href="">groupe 3</a>
+            <a href="">groupe 4</a>
+          </div>
+        </div>
+      </div>
     </main>
 
 
