--- a/groupe.html
+++ b/groupe.html
@@ -117,12 +117,13 @@
       <div class="box-container">
         <div class="box"> 
           <h2>Veuillez choisir la thématique</h2>
-          <div class="menuu ">      
-            <a href="">Theméatique 1</a>
-            <a href="">Theméatique 2</a>
-            <a href="">Theméatique 3</a>
-            <a href="">Theméatique 4</a>
-          </div>
+          <button id="btnn" onclick="showthing()">click</button>
+          <ul id="menuu" class="menuu">      
+            <li><a href="">Theméatique 1</a></li>
+            <li><a href="">Theméatique 2</a></li>
+            <li><a href="">Theméatique 3</a></li>
+            <li><a href="">Theméatique 4</a></li>
+          </ul>
         </div>
         <div class="box"> 
           <h2>Veuillez choisir le groupe</h2>
@@ -138,4 +139,5 @@
 
 
   <script src="js/script.js"></script>
+  <script src="js/groupe.js"></script>
 </body>   
