--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
        <span class="tooltip">Statistiques</span>
      </li>
      <li>
-      <a class="flyer" href="#">
+      <a class="flyer" href="contact.html">
         <i class='bx bx-phone-call fly' ></i>
         <span class="links_name">Contacts</span>
       </a>
