--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
        <span class="tooltip">Groupe</span>
      </li>
      <li>
-       <a class="flyer" href="#">
+       <a class="flyer" href="reunion.html">
          <i class='bx bx-user-voice fly' ></i>
          <span class="links_name">Réunions</span>
        </a>
