--- a/groupe.html
+++ b/groupe.html
@@ -47,7 +47,7 @@
        <span class="tooltip">Groupe</span>
      </li>
      <li>
-       <a class="flyer" href="#">
+       <a class="flyer" href="reunion.html">
          <i class='bx bx-user-voice fly' ></i>
          <span class="links_name">Réunions</span>
        </a>
@@ -82,7 +82,7 @@
        <span class="tooltip">Statistiques</span>
      </li>
      <li>
-      <a class="flyer" href="#">
+      <a class="flyer" href="contact.html">
         <i class='bx bx-phone-call fly' ></i>
         <span class="links_name">Contacts</span>
       </a>
