--- a/reunion.html
+++ b/reunion.html
@@ -44,14 +44,14 @@
            <span class="tooltip">Plan national cancer</span>
          </li>
          <li>
-           <a class="flyer" href="#">
+           <a class="flyer" href="groupe.html">
              <i class='bx bx-group fly'></i>
              <span class="links_name">Groupe</span>
            </a>
            <span class="tooltip">Groupe</span>
          </li>
          <li>
-           <a class="flyer" href="#">
+           <a class="flyer" href="reunion.html">
              <i class='bx bx-user-voice fly' ></i>
              <span class="links_name">Réunions</span>
            </a>
@@ -86,7 +86,7 @@
            <span class="tooltip">Statistiques</span>
          </li>
          <li>
-          <a class="flyer" href="#">
+          <a class="flyer" href="contact.html">
             <i class='bx bx-phone-call fly' ></i>
             <span class="links_name">Contacts</span>
           </a>
