select page groupe, faut fixer problème de taille

--- a/groupe.html
+++ b/groupe.html
@@ -114,10 +114,67 @@
      </section>
     <main>
       <h1 class="titre">consultation des groupes</h1>
+      <div class="container">
+        <h2>Veuillez choisir la thématique</h2>
+          <div class="choix"> <!-- select box-->
+            <div class="option-box"> <!-- option container-->
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Theméatique1"
+                name="category">
+                <label for="Theméatique1">Theméatique 1</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Theméatique2"
+                name="category">
+                <label for="Theméatique2">Theméatique 2</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Theméatique3"
+                name="category">
+                <label for="Theméatique3">Theméatique 3</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Theméatique4"
+                name="category">
+                <label for="Theméatique4">Theméatique 4</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Theméatique5"
+                name="category">
+                <label for="Theméatique5">Theméatique 5</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Theméatique6"
+                name="category">
+                <label for="Theméatique6">Theméatique 6</label>
+              </div>
+            </div>
+            <div class="choisi">
+              Choisir la thématique
+            </div>
+          </div>
+      </div>
       <div class="box-container">
         <div class="box"> 
           <h2>Veuillez choisir la thématique</h2>
-          <button id="btnn" onclick="showthing()">click</button>
           <ul id="menuu" class="menuu">      
             <li><a href="">Theméatique 1</a></li>
             <li><a href="">Theméatique 2</a></li>
