some changes to group page, still need work though

--- a/groupe.html
+++ b/groupe.html
@@ -114,7 +114,8 @@
      </section>
     <main>
       <h1 class="titre">consultation des groupes</h1>
-      <div class="container">
+      <div class="selection">
+        <div class="container">
         <h2>Veuillez choisir la thématique</h2>
           <div class="choix"> <!-- select box-->
             <div class="option-box"> <!-- option container-->
@@ -168,33 +169,70 @@
               </div>
             </div>
             <div class="choisi">
-              Choisir la thématique
+              <a>Choisir la thématique</a>
             </div>
           </div>
-      </div>
-      <div class="box-container">
-        <div class="box"> 
-          <h2>Veuillez choisir la thématique</h2>
-          <ul id="menuu" class="menuu">      
-            <li><a href="">Theméatique 1</a></li>
-            <li><a href="">Theméatique 2</a></li>
-            <li><a href="">Theméatique 3</a></li>
-            <li><a href="">Theméatique 4</a></li>
-          </ul>
         </div>
-        <div class="box"> 
-          <h2>Veuillez choisir le groupe</h2>
-          <div class="menuu ">      
-            <a href="">groupe 1</a>
-            <a href="">groupe 2</a>
-            <a href="">groupe 3</a>
-            <a href="">groupe 4</a>
+        <div class="container">
+        <h2>Veuillez choisir le groupe</h2>
+          <div class="choix"> <!-- select box-->
+            <div class="option-box"> <!-- option container-->
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Groupe1"
+                name="category">
+                <label for="Groupe1">Groupe 1</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Groupe2"
+                name="category">
+                <label for="Groupe2">Groupe 2</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Groupe3"
+                name="category">
+                <label for="Groupe3">Groupe 3</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Groupe4"
+                name="category">
+                <label for="Groupe4">Groupe 4</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Groupe5"
+                name="category">
+                <label for="Groupe5">Groupe 5</label>
+              </div>
+              <div class="option">
+                <input 
+                type="radio" 
+                class="radio" 
+                id="Groupe6"
+                name="category">
+                <label for="Groupe6">Groupe 6</label>
+              </div>
+            </div>
+            <div class="choisi">
+              <a>Choisir le groupe</a>
+            </div>
           </div>
         </div>
-      </div>
+    </div>
     </main>
-
-
   <script src="js/script.js"></script>
   <script src="js/groupe.js"></script>
 </body>   
